force-app/main/default/objects/Disclosure_Event__c/Disclosure_Event__c.object-meta.xml
<CustomObject>
    <description>Ledger of every time a preference was shown to someone, visible to the person it concerns. Added after self-critique: a preference that travels ahead of you is a disclosure made in your absence.</description>
    <label>Disclosure Event</label>
    <nameField>
        <label>Disclosure Number</label>
        <type>AutoNumber</type>
        <displayFormat>DE-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Disclosure Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>