force-app/main/default/objects/Disclosure_Event__c/fields/Access_Preference__c.field-meta.xml
<CustomField>
    <fullName>Access_Preference__c</fullName>
    <description>The preference that was shown.</description>
    <inlineHelpText>The preference that travelled. Every row here is something disclosed about a person while they were not in the room.</inlineHelpText>
    <label>Access Preference</label>
    <referenceTo>Access_Preference__c</referenceTo>
    <relationshipLabel>Disclosure Events</relationshipLabel>
    <relationshipName>Disclosure_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>