force-app/main/default/objects/Disclosure_Event__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Why it was shown, e.g. 'meeting invite 14 Sep'.</description>
    <inlineHelpText>Why it was shown, in operational terms. Never anything about the person's health.</inlineHelpText>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>