force-app/main/default/objects/Disclosure_Event__c/fields/Shown_At__c.field-meta.xml
<CustomField>
    <fullName>Shown_At__c</fullName>
    <description>When it was shown.</description>
    <inlineHelpText>When it happened. The person can ask for this list at any time by replying WHO, and they are entitled to all of it.</inlineHelpText>
    <label>Shown At</label>
    <type>DateTime</type>
</CustomField>