force-app/main/default/objects/Disclosure_Event__c/fields/Shown_To__c.field-meta.xml
<CustomField>
    <fullName>Shown_To__c</fullName>
    <description>Who saw it.</description>
    <inlineHelpText>Who saw it. Record it accurately even when it is awkward, because the person is entitled to know exactly who knows.</inlineHelpText>
    <label>Shown To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>