force-app/main/default/objects/Disclosure_Event__c/listViews/All_Disclosures.listView-meta.xml
<ListView>
    <fullName>All_Disclosures</fullName>
    <columns>NAME</columns>
    <columns>Shown_To__c</columns>
    <columns>Shown_At__c</columns>
    <columns>Context__c</columns>
    <columns>Access_Preference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All disclosures</label>
</ListView>